HTMLTrackElement should be pending while it is waiting for LoadableTextTrack request https://bugs.webkit.org/show_bug.cgi?id=208798 <rdar://problem/60325421>

Reviewed by Geoffrey Garen.

Have HTMLTrackElement and subclass ActiveDOMObject::hasPendingActivity() to keeps its
wrapper alive if its in LOADING state and the page's script has relevant load events
event listeners registered.

No new tests, covered by media/track/track-disabled-addcue.html.

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::HTMLTrackElement):
(WebCore::HTMLTrackElement::create):
(WebCore::HTMLTrackElement::didCompleteLoad):
(WebCore::HTMLTrackElement::readyState const):
(WebCore::HTMLTrackElement::activeDOMObjectName const):
(WebCore::HTMLTrackElement::eventListenersDidChange):
(WebCore::HTMLTrackElement::hasPendingActivity const):
(WebCore::HTMLTrackElement::readyState): Deleted.
* html/HTMLTrackElement.h:
* html/HTMLTrackElement.idl:


Canonical link: https://commits.webkit.org/222605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259138 268f45cc-cd09-0410-ab3c-d52691b4dbfc